# ime-api

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  middleware.rs  quiz_data.json
src/assets/: quiz_data.json
src/handlers/: mod.rs  question_handler.rs
src/models/: mod.rs
src/routes/: mod.rs  question_data.rs
src/test/: mod.rs  test_all_questions.rs  test_filtered_questions.rs
src/utils/: cache.rs  error_handling.rs  logging_utils.rs  mod.rs  response_utils.rs  serialization_utils.rs
