[package]
name = "ime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hitbox = "^0.1.1"
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
prometheus = "0.13.3"
ratelimit_meter = "5.0.0"
actix-service = "2.0.0"
reqwest = "0.11"
chrono = "0.4.26"
futures = "0.3"
actix-rt = "2"
rand = "0.8"
ratelimit = "0.7.0"
diesel = { version = "2.1.1", features = ["sqlite"] }

[dev-dependencies]
tokio-test = "0.4"
